--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,19 +7,61 @@ output:
 
 
 ## Loading and preprocessing the data
+```{r}
+originalData <- read.csv("activity.csv")
+summary(originalData)
+head(originalData)
+data <- originalData[!is.na(originalData$steps),]
+head(data)
+```
 
 
 
 ## What is mean total number of steps taken per day?
+```{r}
+totalStepsByDay <- aggregate(data$steps, by=list(data$date), FUN=sum)
+colnames(totalStepsByDay) <- c("date", "steps")
+head(totalStepsByDay)
+hist(totalStepsByDay$steps)
+mean(totalStepsByDay$steps)
+```
 
 
 
 ## What is the average daily activity pattern?
+```{r}
+meanStepsByInterval <- aggregate(data$steps, by=list(data$interval), FUN=mean)
+colnames(meanStepsByInterval) <- c("interval", "steps")
+head(meanStepsByInterval)
+plot(meanStepsByInterval, type = "l")
+```
 
 
 
 ## Imputing missing values
+```{r}
+sum(is.na(originalData))
+filledData <- originalData
+filledData[is.na(originalData$steps),]$steps <- mean(meanStepsByInterval$steps)
+
+totalStepsByDayFilled <- aggregate(filledData$steps, by=list(filledData$date), FUN=sum)
+colnames(totalStepsByDayFilled) <- c("date", "steps")
+head(totalStepsByDayFilled)
+hist(totalStepsByDayFilled$steps)
+mean(totalStepsByDayFilled$steps)
+median(totalStepsByDayFilled$steps)
+```
 
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+```{r}
+library(ggplot2)  
+filledData["weekDay"] <- weekdays(as.Date(filledData$date, "%Y-%m-%d"))
+filledData["weekEnd"] <- "Weekday"
+filledData[filledData$weekDay == "Saturday" | filledData$weekDay == "Sunday", ]$weekEnd <- "Weekend" 
+meanStepsByWeekEndWeekDay <- aggregate(filledData$steps, by=list(filledData$interval, filledData$weekEnd), FUN=mean)
+colnames(meanStepsByWeekEndWeekDay) <- c("interval", "weekEnd", "steps")
+summary(meanStepsByWeekEndWeekDay)
+```
+
